# rust-win32-minimal

./: Cargo.toml
src/: main.rs
